--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
-
 <!doctype html>
 <html lang="pt-br">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link rel="manifest" href="manifest.json">
-<title>TransforMais • Try-On de Corte</title>
-<link rel="stylesheet" href="styles.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>TransforMais • Try-On de Corte</title>
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<header>
-  <h1>TransforMais • Try-On de Corte</h1>
-</header>
+  <header>
+    <h1>TransforMais • Try-On de Corte</h1>
+  </header>
 
-<main>
-  <section id="camera-section">
-    <video id="video" playsinline autoplay></video>
-    <canvas id="output"></canvas>
-    <img id="overlay" src="assets/overlays/sidepart.png" alt="overlay">
-  </section>
+  <main>
+    <!-- Vídeo fica oculto; desenhamos tudo no canvas -->
+    <video id="video" playsinline autoplay muted></video>
+    <canvas id="canvas"></canvas>
 
-  <section id="controls">
-    <div class="row">
-      <label for="style">Estilo:</label>
-      <select id="style">
-        <option value="sidepart">Social com risca (lado)</option>
-        <option value="shortcrop">Social curto</option>
-        <option value="quiff">Topo com volume</option>
-      </select>
-    </div>
-    <div class="row">
-      <label for="opacity">Intensidade:</label>
-      <input id="opacity" type="range" min="0.2" max="1" value="0.9" step="0.05">
-    </div>
-    <button id="snap">Salvar preview</button>
-    <a id="download" download="transfor_mais_preview.png">Baixar</a>
-  </section>
-</main>
+    <section id="controls">
+      <div class="row">
+        <label for="style">Estilo:</label>
+        <select id="style"></select>
+      </div>
 
-<footer>
-  <small>Prévia ilustrativa — resultado real pode variar. © Barbearia TransforMais</small>
-</footer>
+      <div class="row">
+        <label for="opacity">Intensidade:</label>
+        <input id="opacity" type="range" min="0" max="1" step="0.02" value="0.95" />
+      </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
-<script src="script.js"></script>
+      <button id="save">Salvar preview</button>
+      <p class="disclaimer">Prévia ilustrativa — resultado real pode variar. © Barbearia TransforMais</p>
+    </section>
+  </main>
+
+  <!-- Mediapipe (CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
